# smartclockbackup

./: # Code Citations.md  ## GitHub Copilot Chat.md  .firebaserc  .gitignore  .vps-management-temp.html  ASSESSMENT-CACHE-COMPLETE.md  CLOUD-FUNCTION-FALLBACK-FIX.md  CORRECT-HIKVISION-API.md  DATA-FLOW-DIAGRAM.md  DEVICE-API-FINDINGS.md  EMAIL-SETUP-GUIDE.md  EMPLOYEE-AUTH-UPDATE.md  EVENT-STORAGE-SOLUTION.md  HIKVISION-EVENT-EXTRACTION-SUCCESS.md  HIKVISION-EXTRACTION-GUIDE.md  HIKVISION-SYNC-README.md  HISTORICAL-IMPORT-GUIDE.md  ISOLATED-DEPLOYMENT-GUIDE.md  MONTHLY-DEVICE-SYNC-GUIDE.md  NEW-CHAT-ARCHITECTURE.md  PRODUCTION-SETUP-COMPLETE.md  README.md  REAL-EVENTS-SETUP.md  SETUP_GUIDE.md  SMARTCLOCK-BIO-QUICK.md  SMARTCLOCK-BIO.md  STAFF-APP-IMPLEMENTATION.md  SYNC-SERVICE-SETUP.md  TIMECARD-CACHE-QUICK-START.md  TIMECARD-CACHE-SYSTEM.md  VPS-RELAY-SETUP.md  WHATSAPP-MODULE.md  align-collections-function.js  analyze-intact-business.js  analyze-web-interface.js  app.json  basic-relay.cjs  basic-relay.js  business-loading-test.html  calculate-assessment-cache.js  (+165 more)
.firebase/: .graphqlrc  hosting.c3Jj.cache
azam notes/: azam notes.md
dataconnect/: dataconnect.yaml
functions/: aggressiveCleanup.js  align-collections.cjs  assessment-fix.js  cacheCalculation.js  check-assessment-cache.cjs  check-assessment-data.cjs  check-attendance.cjs  check-automation-card.cjs  check-az8-manual.cjs  check-shift-config.cjs  check-staff-data.cjs  index.js  (+29 more)
vps/hr-avatar-agent/: .env.template  agent.py  ecosystem-hr.config.js  package.json  prompts.py  pyproject.toml  token-server.js
(+188 files in other folders)
